Updated CSS to fix broken layout on 'break' card

--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@ code {
 }
 
 .reveal {
-  font-size: 5em;
+  font-size: 3em;
 }
 
 .text-left {
